# voms-ldap-plugin

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenLdap.cmake
src/: dbwrap.h  ldapwrap.cc  ldapwrap.h  test_main.cc
